# SiemensSummer2018

w4d1/: Generic Programming.pptx  Thumbs.db  w4d1Presentation.pptx
w4d1/GenericProgrammingSummerSchool/: .gitignore  CMakeLists.txt
w4d1/GenericProgrammingSummerSchool/src/: app.json
w4d1/GenericProgrammingSummerSchool/src/1.TemplateFunctions/: project.json
w4d1/GenericProgrammingSummerSchool/src/1.TemplateFunctions/src/: main.cpp
w4d1/GenericProgrammingSummerSchool/src/2.TemplateClasses/: project.json
w4d1/GenericProgrammingSummerSchool/src/2.TemplateClasses/src/: main.cpp
w4d1/GenericProgrammingSummerSchool/src/3.TemplateSpecialization/: project.json
w4d1/GenericProgrammingSummerSchool/src/3.TemplateSpecialization/src/: main.cpp
w4d1/GenericProgrammingSummerSchool/src/4.PolicyBasedDesign/: project.json
w4d1/GenericProgrammingSummerSchool/src/4.PolicyBasedDesign/Public/: main.cpp
w4d1/GenericProgrammingSummerSchool/src/5.VariadicTemplates/: CMakeLists.txt
w4d1/GenericProgrammingSummerSchool/src/6.VariadicTemplates/: CMakeLists.txt
w4d1/GenericProgrammingSummerSchool/src/DataStructures/: CMakeLists.txt  project.json
w4d1/GenericProgrammingSummerSchool/src/DataStructures/Public/: Complex.h
w4d1/GenericProgrammingSummerSchool/src/DataStructures/include/: Amount.h
w4d1/GenericProgrammingSummerSchool/src/DataStructures/src/: Amount.cpp  Complex.cpp
w4d2/: Smart Pointers.pptx  Thumbs.db  w4d2Presentation.pptx
w4d2/SimpleSmartPointer/: SimpleSmartPointer.sln
w4d2/SmartPointerSummerSchool/: .gitignore  CMakeLists.txt
(+54 files in other folders)
