cmake_minimum_required(VERSION 2.8.9)
project (GenericProgramming)
add_subdirectory(src/1.TemplateFunctions)
add_subdirectory(src/2.TemplateClasses)
add_subdirectory(src/3.TemplateSpecialization)
add_subdirectory(src/4.TemplateInstantiation)
add_subdirectory(src/5.VariadicTemplates)
add_subdirectory(src/DataStructures)
#add_subdirectory(src/MyStaticLib)